docs/requirements/v14.1.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want to be automatically notified when a new version of the tool exists when running the software. ([#2](https://github.com/NASA-PDS/pds4-information-model/issues/2)) 


This requirement is not impacted by the current version
## As a PDS Operator, I want to know how to build and deploy the PDS4 Information Model. ([#3](https://github.com/NASA-PDS/pds4-information-model/issues/3)) 


This requirement is not impacted by the current version
## An LDD developer desires to inherit a class/attribute defined using DD_Associate_External_Class ([#324](https://github.com/NASA-PDS/pds4-information-model/issues/324)) 


This requirement is not impacted by the current version
## As a user I want to know the output of the tool after it completes execution. ([#330](https://github.com/NASA-PDS/pds4-information-model/issues/330)) 


This requirement is not impacted by the current version
## As a developer, I want to know the dLDD version from the output JSON data ([#338](https://github.com/NASA-PDS/pds4-information-model/issues/338)) 


This requirement is not impacted by the current version
## As a user, I want to specify an IngestLDD using a relative path ([#341](https://github.com/NASA-PDS/pds4-information-model/issues/341)) 


This requirement is not impacted by the current version
## As a developer I want to generate a query model that relates semantically similar permissible values. ([#361](https://github.com/NASA-PDS/pds4-information-model/issues/361)) 


This requirement is not impacted by the current version
## As an operator, I want to be able to convert from XML to RDF using the PDS4 Information Model ([#387](https://github.com/NASA-PDS/pds4-information-model/issues/387)) 


This requirement is not impacted by the current version
## CCB-329 - Broaden Definition of Attribute aperture ([#403](https://github.com/NASA-PDS/pds4-information-model/issues/403)) 


This requirement is not impacted by the current version
## As a user, I want to know the actual value for a failed schematron validation ([#427](https://github.com/NASA-PDS/pds4-information-model/issues/427)) 


This requirement is not impacted by the current version
## CCB-337 - Change data type Modification_Detail/modification_date to ASCII_Date_Time_YMD ([#436](https://github.com/NASA-PDS/pds4-information-model/issues/436)) 


This requirement is not impacted by the current version
## CCB-339: add Units_of_Power with SI watts as option ([#443](https://github.com/NASA-PDS/pds4-information-model/issues/443)) 


This requirement is not impacted by the current version
## CCB-344:  Add data_to_partially_processed_product to reference types for Internal_Reference ([#446](https://github.com/NASA-PDS/pds4-information-model/issues/446)) 


This requirement is not impacted by the current version
## CCB-343: Revise Product_Metadata_Supplemental ([#448](https://github.com/NASA-PDS/pds4-information-model/issues/448)) 


This requirement is not impacted by the current version
## CCB-340 : <Local_Internal_Reference>.<local_identifier_reference> cardinality ([#450](https://github.com/NASA-PDS/pds4-information-model/issues/450)) 


This requirement is not impacted by the current version
## CCB-335: Inventory Specification Allows Too Many Delimiters ([#453](https://github.com/NASA-PDS/pds4-information-model/issues/453)) 


This requirement is not impacted by the current version
## As a developer I want to have the PDS4 Information Model expressed in the RDF/OWL/TTL format.  ([#458](https://github.com/NASA-PDS/pds4-information-model/issues/458)) 


This requirement is not impacted by the current version
## As a namespace steward, I want to provide a more specific definition/nuance for a generic attribute ([#469](https://github.com/NASA-PDS/pds4-information-model/issues/469)) 


This requirement is not impacted by the current version
## As a namespace steward, I want to know the process for allowing namespaces to non-NASA agencies ([#470](https://github.com/NASA-PDS/pds4-information-model/issues/470)) 


This requirement is not impacted by the current version
## As a user, I want to describe a relationship between an attribute in the model and the column of a table ([#473](https://github.com/NASA-PDS/pds4-information-model/issues/473)) 


This requirement is not impacted by the current version
## CCB-348: Add Units_of_Mass_Density as a unit of measure ([#499](https://github.com/NASA-PDS/pds4-information-model/issues/499)) 


This requirement is not impacted by the current version
## CCB-350: Adopt more rigorous / stringent rules for leap seconds and use of "24:00:00" in datetimes ([#502](https://github.com/NASA-PDS/pds4-information-model/issues/502)) 


This requirement is not impacted by the current version
## CCB-351: Term Mapping ([#503](https://github.com/NASA-PDS/pds4-information-model/issues/503)) 


This requirement is not impacted by the current version